--- a/index.html
+++ b/index.html
@@ -412,10 +412,12 @@
           <p class="garant-and-negarant-load__title text">
             Гарантированные и негарантированные нагрузки
           </p>
-          <table>
+          <table class="garant-and-negarant-load__table">
             <tr>
               <td><span class="text">Наименование нагрузки, цепь</span></td>
-              <td><span class="text">Потребляемая мощность S, кВа</span></td>
+              <td class="center">
+                <span class="text">Потребляемая мощность S, кВа</span>
+              </td>
             </tr>
             <tr>
               <td colspan="2">
