Доравботка работы модального окна ошибки

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
     <footer class="footer" id="footer"></footer>
 
     <div id="error-window" class="error-window hidden">
-      <div class="close-sign">X</div>
+      <div id="close-sign" class="close-sign">X</div>
       <p class="error-window__title">Ошибка ! ! !</p>
     </div>
 
